compiler/testData/diagnostics/tests/enum/AbstractEnum.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
package abstract

<!WRONG_MODIFIER_TARGET!>abstract<!> enum class MyAbstractEnum() {}

/* GENERATED_FIR_TAGS: enumDeclaration, primaryConstructor */
